<resources>
    <string name="app_name">サーキット走行マネージャー</string>
    <string name="app_name_en">Circuit Driving Manager</string>
    <string name="title_activity_home">ホーム</string>
    <string name="title_schedule">走行</string>
    <string name="title_record">レコード</string>
    <string name="title_car_management">メンテナンス</string>
    <string name="title_setting">設定</string>
    <string name="title_schedule_detail">走行スケジュール確認</string>

    <string name="schedule_date">開催日時</string>
    <string name="date">日にち</string>
    <string name="pick_date">カレンダーから選択する</string>
    <string name="place">場所</string>
    <string name="has_precautions">注意事項の記載あり</string>
    <string name="application_info">申込状況</string>
    <string name="weather">天気予報</string>
    <string name="temperature">予想気温</string>

    <string name="weather_clear">快晴</string>
    <string name="weather_sunny">晴れ</string>
    <string name="weather_cloudy">曇り</string>
    <string name="weather_rainy">雨</string>
    <string name="weather_fog">霧</string>
    <string name="weather_storm">豪雨</string>
    <string name="weather_snow">雪</string>

    <string name="weather_label">天気</string>
    <string name="min_temperature_label">最低気温</string>
    <string name="max_temperature_label">最高気温</string>
    <string name="pressure_label">気圧</string>
    <string name="humidity_label">湿度</string>
    <string name="wind_label">風速/向き</string>

    <string name="format_temperature">%1$s℃</string>

    <string name="create_track_event">走行会イベントの作成</string>
    <string name="holding_circuit">開催サーキット</string>
    <string name="circuit">サーキット</string>
    <string name="add_circuit">サーキットを新しく追加する</string>
    <string name="hint_circuit_name">富士スピードウェイ</string>
    <string name="hint_circuit_kana">フジスピードウェイ</string>
    <string name="hint_circuit_url">https://www.fsw.tv</string>
    <string name="organizer">主催者</string>
    <string name="organizer_is_empty">主催者が登録されていません。</string>
    <string name="add_organizer">主催者を新しく追加する</string>
    <string name="add_belonging">持ち物を増やす</string>
    <string name="hint_belonging">入力してください</string>
    <string name="hint_organizer_name">株式会社ドライビングチーム</string>
    <string name="hint_organizer_kana">ドライビングチーム</string>
    <string name="hint_organizer_representative_name">代表太郎</string>
    <string name="hint_organizer_tel">08012345678</string>
    <string name="hint_organizer_email">info@driving-team.co.jp</string>
    <string name="hint_organizer_payee_bank_name">XXX銀行</string>
    <string name="hint_organizer_payee_bank_branch_name">XXX支店</string>
    <string name="account_type_savings">普通</string>
    <string name="account_type_current">当座</string>
    <string name="hint_organizer_payee_bank_holder">ドライビングチーム</string>
    <string name="hint_organizer_payee_account_number">01231234</string>

    <string name="create_record">レコードの作成</string>
    <string name="record_list">レコード一覧</string>
    <string name="record_detail">レコード確認</string>
    <string name="select_in_has_record_circuit">記録のあるサーキットから選択</string>
    <string name="lap_time_list">ラップタイムリスト</string>
    <string name="add_lap_time">タイムを追加する</string>
    <string name="title_add_lap_time">ラップタイムを追加</string>
    <string name="desc_add_lap_time">分:秒.秒未満単位の設定ができます</string>
    <string name="memo">メモ</string>
    <string name="hint_record_memo">反省点や、次回の課題、当日感じたことなどをメモしてみましょう</string>
    <string name="photo">フォト</string>
    <string name="hint_record_photo">リザルトの写真や、当日の写真などを、記録と一緒に残してみましょう</string>
    <string name="record_count">記録数：%1$d</string>
    <string name="fastest_laptime">最速タイム：%1$s</string>
    <string name="memo_text">メモ：%1$s</string>

    <string name="delete">削除</string>

    <string name="payment_method_card">クレジットカード</string>
    <string name="payment_method_bank">銀行振込</string>
    <string name="payment_method_payment_service">決済サービス払い</string>
    <string name="payment_method_convenience_store">コンビニ払い</string>
    <string name="payment_method_local">現地払い</string>
    <string name="payment_method_other">その他</string>

    <string name="payment_status_yet">支払い前</string>
    <string name="payment_status_done">支払い済み</string>
    <string name="payment_status_expired">期限切れ</string>
    <string name="schedule_payment_deadline">期限：%1$s</string>

    <string name="not_setting">未設定</string>

    <string name="belongings">持ち物</string>
    <string name="meeting_date">開催日</string>
    <string name="meeting_time">集合時間</string>
    <string name="dismissal_time">解散時間</string>
    <string name="precautions">注意事項</string>
    <string name="precautions_hint">開催や当日の予定などについての注意事項があればメモとして入力してください。</string>
    <string name="price">参加料金</string>
    <string name="price_with_tax">参加料金（税込）</string>
    <string name="payment_method">支払い方法</string>
    <string name="payment_deadline">支払い期限</string>
    <string name="date_pick">日付を選択する</string>
    <string name="create">作成する</string>

    <string name="about_the_day">当日について</string>
    <string name="weather_news">天気予報</string>
    <string name="access">アクセス</string>
    <string name="open_map_app">地図アプリで確認する</string>

    <string name="name">名前</string>
    <string name="name_kana">名前（カナ）</string>
    <string name="url">URL</string>
    <string name="representative_name">代表者名</string>
    <string name="phone_number">電話番号</string>
    <string name="email">メールアドレス</string>
    <string name="payee_info">振込先情報</string>
    <string name="payee_bank_name">銀行名</string>
    <string name="payee_bank_branch_name">支店名</string>
    <string name="payee_bank_account_type">口座種別</string>
    <string name="payee_bank_holder_name">振込先名称</string>
    <string name="payee_bank_account_number">口座番号</string>

    <string name="text_limit">%1$sまで</string>

    <string name="add">追加する</string>

    <string name="success_create">作成しました。</string>
    <string name="error_create">作成に失敗しました。時間をおいて再度お試しください。</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="maintenance">
        <item>エンジンオイル</item>
        <item>ミッションオイル</item>
        <item>デフオイル</item>
        <item>各オイル漏れ</item>
        <item>ブレーキパッド</item>
        <item>ブレーキローター</item>
        <item>ブレーキフルード</item>
        <item>タイヤ</item>
        <item>タイヤ空気圧</item>
        <item>ホイールナット</item>
        <item>クーラント</item>
        <item>異音・異臭</item>
    </string-array>
    <string name="car_empty">車両を追加してメンテナンスの管理をしてみましょう</string>
    <string name="car_maintenance_hint">メンテナンスは、エンジンオイルやタイヤなど、走行前に必要な車両点検などの結果を記録し、いつでも確認することができるようになる機能です。</string>
    <string name="selected_car">選択中の車両</string>
    <string name="add_car">車両を追加する</string>
    <string name="input_car_name">車両名を入力してください</string>
    <string name="check_status">状態</string>
    <string name="last_check_odo">走行距離</string>
    <string name="last_check_date">最終確認日</string>
</resources>
