<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_car_management"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_car_management" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_setting" />

</menu>
