<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schedule">

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="app.imuuzak.driving_management.ui.home.fragment.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="app.imuuzak.driving_management.ui.home.fragment.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="app.imuuzak.driving_management.ui.home.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>
