<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.schedule.activity.CreateTrackEventActivity">

    <data>

        <variable
            name="uiEvent"
            type="app.imuuzak.driving_management.ui.schedule.activity.CreateTrackEventActivity.Companion.UIEvent" />

        <variable
            name="viewModel"
            type="app.imuuzak.driving_management.ui.schedule.viewmodel.CreateTrackEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holding_circuit" />

            <Spinner
                android:id="@+id/circuitSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/small"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="8dp"
                android:text="@string/add_circuit"
                android:onClick="@{() -> uiEvent.onClickCreateCircuit()}"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/organizer" />

            <Spinner
                android:id="@+id/organizerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/small"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="8dp"
                android:text="@string/add_organizer"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/belongings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:maxHeight="300dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_date" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="@dimen/small"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="@{() -> uiEvent.onClickMeetingDate()}"
                        android:text="@{viewModel.meetingDateText}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_time" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="@dimen/small"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="@{() -> uiEvent.onClickMeetingTime()}"
                        android:text="@{viewModel.meetingTimeText}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dismissal_time" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="@dimen/small"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="@{() -> uiEvent.onClickDismissalTime()}"
                        android:text="@{viewModel.dismissalTimeText}" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/precautions" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/small"
                android:autofillHints="@string/precautions_hint"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/precautions_hint"
                android:inputType="textMultiLine"
                android:text="@={viewModel.precautions}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="numberDecimal|numberSigned"
                    android:text="@={viewModel.price}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_with_tax" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.priceWithTax}" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/payment_method" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/payment_deadline" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/small"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{() -> uiEvent.onClickPaymentDeadline()}"
                android:text="@{viewModel.paymentDeadlineText}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/create" />
        </LinearLayout>

    </ScrollView>

</layout>